<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:titleEnabled="false">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:fitsSystemWindows="true"
                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax"
                android:layout_marginBottom="56dp"
                app:layout_collapseParallaxMultiplier="0.7" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignBottom="@+id/avatar"
                android:layout_gravity="bottom"
                app:layout_collapseMode="pin"
                app:title="@string/app_name" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <View
                android:id="@+id/divider"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/title_Wifi"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_toStartOf="@id/divider"
                android:minLines="2"
                android:padding="8dp"
                android:text="@string/wi_fi_data_usage_title"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/title_Mobile"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/divider"
                android:minLines="2"
                android:padding="8dp"
                android:text="@string/mobile_data_usage_title"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/wifi_subtitle"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_Wifi"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:padding="8dp"
                android:text="@string/data_usage_wifi"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/mobile_subtitle"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_Mobile"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/divider"
                android:padding="8dp"
                android:text="@string/data_usage_mobile"
                android:textAlignment="textEnd" />


            <TextView
                android:id="@+id/value_wifi"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wifi_subtitle"
                android:layout_alignParentStart="@+id/divider"
                android:layout_alignParentEnd="@+id/divider"
                android:padding="8dp"
                android:text="@string/not_implemented"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/value_mobile"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobile_subtitle"
                android:layout_alignEnd="@+id/title_Wifi"
                android:layout_marginTop="-5dp"
                android:padding="8dp"
                android:text="@string/not_implemented"
                android:textAlignment="textEnd" />



        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>